# rag-hydrology

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  THREAT_MODEL.md  config.yaml  docker-compose.langfuse.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/golden/: example.yaml
src/rag/: __init__.py  cli.py  collections.py  config.py  evaluation.py  factories.py  generation.py  ingest.py  logging_setup.py  metrics.py  retrieval.py  sanitize.py  server.py  server_factory.py  tracing.py
src/rag/web/: index.html
src/rag/web/assets/: app.js  styles.css
tests/: test_collections.py  test_evaluation.py  test_generation.py  test_ingest.py  test_metrics.py  test_retrieval.py  test_sanitize.py  test_server.py  test_tracing.py
