[project]
name = "rag-hydrology"
version = "0.1.0"
description = "State-of-the-art RAG system for hydrology research papers"
requires-python = ">=3.11"
dependencies = [
    # LangChain core
    "langchain-core>=0.3",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-openai>=0.3",
    "langchain-chroma>=0.2",
    "langchain-cohere>=0.3",
    # PDF parsing (requires system package: tesseract-ocr tesseract-ocr-eng tesseract-ocr-spa)
    "pymupdf>=1.25",
    "pymupdf4llm>=0.0.17",
    # Sparse retrieval
    "rank-bm25>=0.2.2",
    # Evaluation
    "ragas>=0.2",
    "datasets>=3.0",
    # Config & CLI
    "pydantic-settings>=2.5",
    "pyyaml>=6.0",
    "typer[all]>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    # Utilities
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
rag = "rag.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
